feat(dsl-java): structural reactivity — Conditional.when/Case + emitter subtree reconcile
The conditional-rendering foundation (spec DSL.md §3.4): a structural
container's single child subtree is selected by a signal and reconciled into
TREE deltas.

- Conditional: statically importable when(Signal<Boolean>, then, else) and
  when(Signal<T>, Case.of(...)...) / Case.otherwise(...); Group-backed slot
  (bare VSTACK node)
- Emitter: reconcileSlot/reconcileChildren/reconcileNode/emitSubtreeInto —
  position+type-stable ids, recorded-op replay in one frame (skipped when
  unchanged: identical recompute = zero opcodes, no frame), slot subtrees own
  their bindings (per-node nodeBindings, destroyed on replace), nested slots
  work, reactive content stays fine-grained (render untracked)
- RenderResult: routing maps are live unmodifiable views so a branch swap
  updates tap/text/value/date routing after mount
- ConditionalTest: 7 tests (branch-swap deltas in the vector-25 shape,
  zero-opcode recompute, switch by key, empty slot, nested destroy, reactive
  content, binding survival across swaps) — 47 tests green
- status.md: structural reactivity added (implemented) + removed-property gap
  noted